--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CourseProject</title>
+  <title>Sociedad de Radiologia</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="keywords" content="radiologa, congreso, radiacion, cursos">
+  <meta name="description" content="Sociedad de radiologia. Capacitaciones para profesionales radiologos">
+  <link rel="icon" type="image/x-icon" href="../src/assets/images/logo.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Assistant&family=Mulish:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
