--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <footer>© Copyright 2021 SERAM – Diseño Web y Desarrollo SUMURDIGITAL – All Rights Reserved</footer>
 </body>
 </html>
