--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <footer>© Copyright 2021 SERAM – Diseño Web y Desarrollo SUMURDIGITAL – All Rights Reserved</footer>
+  <footer>© Copyright 2023 SR– Diseño Web y Desarrollo  – All Rights Reserved</footer>
 </body>
 </html>
