--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,12 @@
   <meta name="description" content="Sociedad de radiologia. Capacitaciones para profesionales radiologos">
   <link rel="icon" type="image/x-icon" href="../src/assets/images/logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Mulish:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
   <footer>© Copyright 2023 SR– Diseño Web y Desarrollo  – All Rights Reserved</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
